--- a/event/app/views/dm_event/admin/registrations/_form.html.erb
+++ b/event/app/views/dm_event/admin/registrations/_form.html.erb
@@ -30,7 +30,7 @@
           </div>
         </div>
         <div class="col-md-6 col-sm-6">
-          <dl>
+          <dl class="block">
             <dt class="text-info">Price</dt>
             <dd><%= price_details(@registration.workshop_price) %></dd>
             <% if @registration.payment_comment %>
@@ -38,6 +38,39 @@
               <dd><%= @registration.payment_comment.body %></dd>
             <% end %>
           </dl>
+          <%= subsection title: "Previous Event Registrations" do %>
+            <table class="table table-condensed table-striped">
+              <thead>
+                <tr>
+                  <th width=20></th>
+                  <th class="name">Workshop Title</th>
+                  <th class="name">Paid</th>
+                </tr>
+              </thead>
+              <tbody>
+                <% outstanding = Money.new(0) %>
+                <% Registration.where(user_profile_id: @registration.user_profile).each do |registration| %>
+                  <% unless registration == @registration %>
+                    <tr>
+                      <td>
+                        <button class='btn btn-xs btn-<%= registration.current_state %> hovertip' data-placement='right' title='<%= "#{registration.current_state.capitalize} on #{format_date(registration.process_changed_on)}" %>'></button>
+                      </td>
+                      <td class="name"><%= link_to registration.workshop.title, edit_admin_registration_path(registration) %></td>
+                      <td class="name"><%= present(registration).balance_or_paid %></td>
+                    </tr>
+                    <% outstanding += registration.balance_owed %>
+                  <% end %>
+                <% end %>
+              </tbody>
+              <tfooter>
+                <tr>
+                  <td></td>
+                  <td><strong>Outstanding Balance</strong></td>
+                  <td><%= outstanding.format %></td>
+                </tr>
+              </tfooter>
+            </table>
+          <% end %>
         </div>
         <div class="col-md-3 col-sm-3">
           <ul class="statistics">
