--- a/cms/app/views/dm_cms/admin/cms_blogs/show.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_blogs/show.html.erb
@@ -59,7 +59,7 @@
       <table class="table table-condensed table-nolines">
         <tr>
           <% if @blog.is_private? %>
-            <td>Memebers</td>
+            <td>Members</td>
             <td><%= @blog.member_count(:all) %></td>
           <% else %>
             <td>Followers</td>
