--- a/event/app/views/dm_event/admin/workshops/show.html.erb
+++ b/event/app/views/dm_event/admin/workshops/show.html.erb
@@ -18,8 +18,9 @@
 
 <div class="row">
   <div class="col-md-9">
-    <% toolbar = toolbar_btn(icons(:new), register_new_url(@workshop), target: '_blank', title: 'New Registration', class: "btn btn-link btn-icon") %>
-    <%= panel title: 'Registrations', toolbar: toolbar, body: false do %>
+    <% toolbar  = toolbar_btn(icons(:new), register_new_url(@workshop), target: '_blank', title: 'New Registration', class: "btn btn-link btn-icon") %>
+    <% title    = params[:duplicates].nil? ? 'Registrations' : 'Registrations (Duplicates)'%>
+    <%= panel title: title, toolbar: toolbar, body: false do %>
       <table id="registration_table" class="table table-striped table-bordered" data-source="<%= dm_event.admin_workshop_url(@workshop, duplicates: params[:duplicates]) %>">
         <thead>
           <tr>
