add link to registration in financial details
also add indicator that there are comments associated with an unpaid registration

--- a/event/app/views/dm_event/admin/workshops/financials.html.erb
+++ b/event/app/views/dm_event/admin/workshops/financials.html.erb
@@ -103,8 +103,8 @@
       <% unpaid.each do |registration| -%>
         <tr>
           <td class="receipt_code" style="white-space:nowrap"><%= registration.receipt_code %></td>
-          <td class="name"><%= registration.full_name %></td>
-          <td class="cost"><%= registration.balance_owed.format %></td>
+          <td class="name"><%= link_to registration.full_name, dm_event.edit_admin_registration_path(registration) %> </td>
+          <td class="cost"><%= registration.balance_owed.format %><%= content_tag(:span, icons('icon-bubble2 inside-content', size: 12), class: 'pull-right') if registration.private_comments.count > 0 %></td>
           <td class="date" style="white-space:nowrap"><%= format_date(registration.created_at) %></td>
           <td class="date" <%= "style='background-color: #B3D4FD;'".html_safe if registration.payment_reminder_due? %>>
             <%= registration.payment_reminder_sent_on.nil? ? 'not yet' : "#{distance_of_time_in_words_to_now(registration.payment_reminder_sent_on)} ago" %>
@@ -134,7 +134,7 @@
       <% @payments.sort { |x, y| x.payment_date <=> y.payment_date }.each_with_index do |payment, index| -%>
         <tr>
           <td class="date" style="white-space:nowrap"><%= format_date(payment.payment_date) %></td>
-          <td class="name"><%= payment.owner.full_name %></td>
+          <td class="name"><%= link_to payment.owner.full_name, dm_event.edit_admin_registration_path(payment.owner) %></td>
           <td class="item_id"><%= payment.item_ref %></td>
           <td class="cost"><%= payment.total.format(no_cents_if_whole: true, symbol: true) %></td>
           <td class="payment_method" style="white-space:nowrap"><%= payment.payment_method.titleize %></td>
