--- a/cms/app/views/dm_cms/admin/cms_blogs/_form.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_blogs/_form.html.erb
@@ -4,7 +4,7 @@
 <%= simple_form_for @blog, url: submit_url,
     html: { class: 'form-horizontal' }, wrapper: :bs3_horizontal_form, wrapper_mappings: DmAdmin::FormWrapperMappings do |f| %>
 
-  <%= f.error_notification message: "Please review the problems below<ul><li>one</li></ul>" %>
+  <%= f.error_notification message: "Please review the problems below" %>
   <%= panel header: false do %>
     <%= locale_tabs do |locale| %>
       <%= f.input "title_#{locale}", label: 'Blog Title', id: 'name_error', required: true %>
