--- a/core/app/views/dm_core/profile/details.html.erb
+++ b/core/app/views/dm_core/profile/details.html.erb
@@ -1,38 +1,38 @@
 <% content_for :sidebar do %>
-  <%= render :partial => 'dm_core/profile/profile_sidebar' %>
+  <%= render partial: 'dm_core/profile/profile_sidebar' %>
 <% end %>
 
-<%= simple_form_for(@user_profile, :url => dm_core.edit_profile_details_path, html: {id: 'profile_form', class: 'profile_details_form'}) do |f| %>
+<%= simple_form_for(@user_profile, url: dm_core.edit_profile_details_path, wrapper: simple_form_theme_wrapper, html: {id: 'profile_form', class: 'profile_details_form'}) do |f| %>
   <%= flash_notices %>
-  <%= f.error_notification :message => I18n.t('core.errors_below') %>
+  <%= f.error_notification message: I18n.t('core.errors_below') %>
 
   <fieldset>
     <h2><%= I18n.t 'core.profile_public_title' %></h2>
     <p><%= I18n.t 'core.profile_public_explanation' %></p>
-    <%= f.input :public_name, :label => I18n.t('core.profile_public_name'), :required => true %>
-    <%= f.input :country_id, :collection => ut_country_select_collection(false), :label => I18n.t('core.profile_country'), :required => true %>
-    <%= f.input :public_avatar, label: I18n.t('core.profile_public_upload'), :as => :image, hint: I18n.t('core.profile_public_upload_help'), :input_html => {:preview_version => :sq100} %>
+    <%= f.input :public_name, label: I18n.t('core.profile_public_name'), required: true %>
+    <%= f.input :country_id, collection: ut_country_select_collection(false), label: I18n.t('core.profile_country'), required: true %>
+    <%= f.input :public_avatar, label: I18n.t('core.profile_public_upload'), as: :image, hint: I18n.t('core.profile_public_upload_help'), input_html: {preview_version: :sq100} %>
   </fieldset>
 
   <fieldset>
     <h2><%= I18n.t 'core.profile_private_title' %></h2>
     <p><%= I18n.t 'core.profile_private_explanation' %></p>
     <% if I18n.locale == :ja %>
-      <%= f.input :last_name, :label => I18n.t('core.profile_last_name'), :required => true %>
-      <%= f.input :first_name, :label => I18n.t('core.profile_first_name'), :required => true %>
+      <%= f.input :last_name, label: I18n.t('core.profile_last_name'), required: true %>
+      <%= f.input :first_name, label: I18n.t('core.profile_first_name'), required: true %>
     <% else %>
-      <%= f.input :first_name, :label => I18n.t('core.profile_first_name'), :required => true %>
-      <%= f.input :last_name, :label => I18n.t('core.profile_last_name'), :required => true %>
+      <%= f.input :first_name, label: I18n.t('core.profile_first_name'), required: true %>
+      <%= f.input :last_name, label: I18n.t('core.profile_last_name'), required: true %>
     <% end %>
-    <%= f.input :address, :label => I18n.t('core.profile_address') %>
-    <%= f.input :address2, :label => I18n.t('core.profile_address2') %>
-    <%= f.input :city, :label => I18n.t('core.profile_city') %>
-    <%= f.input :state, :label => I18n.t('core.profile_state') %>
-    <%= f.input :zipcode, :label => I18n.t('core.profile_zipcode') %>
+    <%= f.input :address, label: I18n.t('core.profile_address') %>
+    <%= f.input :address2, label: I18n.t('core.profile_address2') %>
+    <%= f.input :city, label: I18n.t('core.profile_city') %>
+    <%= f.input :state, label: I18n.t('core.profile_state') %>
+    <%= f.input :zipcode, label: I18n.t('core.profile_zipcode') %>
   </fieldset>
 
   <fieldset class="submit_form">
-    <%= f.button :submit, I18n.t('core.profile_update_btn'), class: 'btn btn-primary' %>
+    <%= f.button :submit, I18n.t('core.profile_update_btn') %>
   </fieldset>
 
 <% end %>
